--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 </head>
 <body>
     <h1>Giphy Party</h1>
-    <section class = "gif-containers">
+    
         I am a container  
+        <form>
+            <label for= "search"> Search </label>
+            <input type="text" name="search"/>
+            <button type="submit"> Search</button>
+        </form>
+        <section class = "gif-containers"></section>
 
-    </section>
 </body>
 </html>
